# genesee-cli

./: .gitignore  README.md  pyproject.toml
codon/: app.py
docs/: PRD-biomarker-validation.md  Philosophy.md
genesee/: __init__.py  __main__.py  app.py
