[project]
name = "genesee"
version = "0.1.0"
description = "AI for biomedical research - by Genesee Sciences"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.89.1",
    "rich>=13.9.4",
    "prompt-toolkit>=3.0.48",
]

[project.scripts]
genesee = "genesee.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
