[project]
name = "genesee"
version = "0.1.0"
description = "AI for biomedical research - by Genesee Sciences"
requires-python = ">=3.10"
dependencies = [
    "textual>=6.11.0",
    "rich>=14.2.0",
    "prompt-toolkit>=3.0.48",
]

[project.scripts]
genesee = "genesee.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
